[gd_scene load_steps=9 format=3 uid="uid://cgjrk731px4bh"]

[ext_resource type="Script" path="res://Tower/TowerScript.gd" id="1_d1arl"]
[ext_resource type="ArrayMesh" uid="uid://b5w027lg1d4b6" path="res://Tower/TowerBoi.obj" id="2_wop6e"]

[sub_resource type="Environment" id="Environment_au3l8"]
background_mode = 1
background_color = Color(0, 0, 0.839216, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8f35e"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_na76f"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qb2fj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ihjbi"]
albedo_color = Color(0, 0.937255, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0pyt4"]
albedo_color = Color(1, 1, 0, 1)

[node name="Tower" type="Node3D"]
script = ExtResource("1_d1arl")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_au3l8")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
light_energy = 4.21

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.46642, 0)
current = true

[node name="TestCube" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)
mesh = SubResource("BoxMesh_8f35e")
surface_material_override/0 = SubResource("StandardMaterial3D_na76f")

[node name="TestCube2" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_qb2fj")
skeleton = NodePath("../TestCube3")
surface_material_override/0 = SubResource("StandardMaterial3D_ihjbi")

[node name="TestCube3" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.603223, -0.00293608, -0.797568, -0.0154487, 0.999849, 0.00800362, 0.797423, 0.0171493, -0.603177, 2.5, -3.00523, 0)
mesh = ExtResource("2_wop6e")
surface_material_override/0 = SubResource("StandardMaterial3D_0pyt4")
